<resources>
  <string name="app_name">MarvelApp</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="imageDescription">image</string>
  <string name="no_description">Sin descripción</string>
  <string name="num_comics">Número de apariciones en comics: %1$s</string>
  <string name="num_series">Número de series: %1$s</string>
  <string name="error_characters">Error al obtener personajes (Detail : %1$s)</string>
  <string name="nav_header_description">Image Nav Header</string>
  <string name="menu_character">Characters</string>
  <string name="menu_comics">Comics</string>
  <string name="menu_series">Series</string>
  <string name="menu_favs">Favoritos</string>
  <string name="caracteres">Characters</string>
  <string name="imageHeader">Image header</string>
  <string name="comics">Comics</string>
  <string name="series">Series</string>
  <string name="image_item">Image item</string>
  <string name="comicsAppearence">Apariciones en Comics</string>
  <string name="details">Details</string>
  <string name="description">Descripción</string>
  <string name="autors">Autores</string>
  <string name="autor">Autor:</string>
  <string name="writer">Escritor:</string>
  <string name="info">Informacion</string>
  <string name="datepublisher">Fecha de Publicación</string>
  <string name="price">Precio</string>
</resources>
